--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,4 +6,6 @@
     align-items: center;
     justify-content:space-between;
     overflow: hidden;
+    background-color: black;
+    color: white;
 }
