--- a/client/src/css/Header.css
+++ b/client/src/css/Header.css
@@ -2,7 +2,14 @@ nav{
     display: flex;
     width: 100%;
     height: 100px;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid black;
+    justify-content: space-between;
+    padding-top: 20px;
+    background: linear-gradient(rgba(0, 0, 0, .8) 30%, rgba(0, 0, 0, 0) 100%)
+}
+nav > *{
+    display: flex;
+}
+nav > * > *{
+    padding: 10px;
+    display: flex;
 }
