--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,9 @@
 #App{
     display:flex;
-    height:100vh;
+    height:100%;
     width:100vw;
     flex-direction:column;
     align-items: center;
     justify-content:space-between;
-    overflow: hidden;
     color: white;
 }
